[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["models.yaml"]

[project]
name = "fabdata-llm"
version = "0.26.0-alpha.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pyyaml",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "pillow",
    "numpy",
    "pydantic == 2.*",
    "python-dotenv == 1.*",
    "mistralai >= 0.1.0,<0.3",
    "google-auth == 2.32.*",
    "google-genai == 1.2.*",
    "openai >= 1.61.0, < 1.62",
    "anthropic==0.49.*",
    "tiktoken == 0.8.*",
    "google-auth == 2.32.*",
    "boto3 >=1.35.0,<1.36",
    "aioboto3 >=13.2.0,<13.3"
]


[tool.pytest.ini_options]
testpaths = [ "tests", ]
