[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdllm", "src/fdllm/models.yaml"]

[project]
name = "fabdata-llm"
version = "0.30.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pyyaml",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "pillow",
    "numpy",
    "pydantic==2.*",
    "python-dotenv==1.*",
    "mistralai>=0.1.0, <0.3",
    "google-auth==2.32.*",
    "google-genai==1.39.0",
    "openai>=1.61.0, <2",
    "anthropic>=0.40.0, <1",
    "tiktoken==0.12.*",
    "boto3>=1.35.0, <1.36",
    "aioboto3>=13.2.0, <13.3",
    "tenacity>=9.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "reportlab>=4.0.0",
]


[tool.pytest.ini_options]
testpaths = [ "tests", ]
markers = [
    "integration: marks tests as integration tests (require API keys, deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
env_files = [".env"]
env_override_existing_values = true
